# OOP_Exercise_4

./: CMakeLists.txt  ConsoleGameView.cpp  ConsoleGameView.h  GameBaseException.cpp  GameBaseException.h  GameController.cpp  GameController.h  GameModel.h  GameModelChangeHandler.cpp  GameModelChangeHandler.h  GameParticipant.cpp  GameParticipant.h  GameParticipantBot.cpp  GameParticipantBot.h  GameParticipantHuman.cpp  GameParticipantHuman.h  main.cpp
